# schism

./: .gitignore  .gitlab-ci.yml  .gitmodules  404.html  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  Cmake_list.txt  Dockerfile  NOTICE  README  README.md  README_PRE_SCHISM  case-study.html  changelog.html  code-contribution.html  contribute-to-this-online-manual.html  faq.html  find_netCDF.txt  include_netcdf.txt  index.html  mkdocs.yml  namelist.input  notes.txt  notes_qsim2schismhost.txt  publications.html  rsync.txt  sitemap.xml  test_file  test_io.F90  verification-tests.html  versions.json
SCHISM_BMI/: CMakeLists.txt  README.md
SCHISM_BMI/BMI/: bmi.f90  bmischism.f90  test_model.f90
SCHISM_BMI/SCHISM_LIB_NWM_BMI/: README.md
SCHISM_BMI/modules/: FindGOTM.cmake  FindNetCDF.cmake  MakeDefineOption.cmake  PrintVariable.cmake
SCHISM_BMI/src/: schism_bmi_driver_test.f90
src/: .CMakeLists.txt.swp  CMakeLists.txt  Makefile  Makefile.aron  README_beta_notes.md  Readme.Simple_wind  Readme.beta_notes  UVP_direct.cdl.sample  bctides.in.sample.AGE  beta_notes  delete_cmake.sh  gfortran_notes  hydraulics.in.sample  merge_WWM_notes_LRU.txt  msource.th  notes.txt  param.nml  param.nml.test  updateGIT.sh  vgrid.in.SZ
src/BMI/: CMakeLists.txt  LIMITATIONS  bmi.f90  bmischism.f90  schism_bmi_driver_test.f90  schism_model_container.f90
src/COSINE/: CMakeLists.txt  combine_cosine_output.f90  cosine.F90  cosine_init.F90  cosine_misc.F90  cosine_mod.F90  misc_module.txt
src/Core/: CMakeLists.txt  _version  gen_modules_clock.F90  gen_version.bash  gen_version.ps1  gen_version.py  harm.F90  hydraulic_structures.F90  misc_modules.F90  petsc_schism.F90  schism_assert.F90  schism_assert.inc  schism_glbl.F90  schism_io.F90  schism_msgp.F90  schism_version.F90.template  scribe_io.F90
src/Driver/: CMakeLists.txt  CMakeLists.txt.0  schism_driver.F90
src/EcoSim/: CMakeLists.txt  bio_init.F90  bio_param.F90  biology.F90  eclight.F90  ecosim.F90  read_ecoin.F90  specir.F90
src/FIB/: CMakeLists.txt  fib.F90  fib_param.F90
src/Fabm/: CMakeLists.txt  fabm_schism.F90  fabm_schism.doxygen  fabm_schism_introduction.md
src/GOTM3.2.5/: ChangeLog  HISTORY  INSTALL  Makefile  README  release.sh  scrn.out
src/GOTM4.0/: Makefile  README  release.sh
src/GOTM5.2/: README.md
src/Hydro/: CMakeLists.txt  aquire_hgrid.F90  aquire_vgrid.F90  bktrk_subs.F90  cross_product.F90  grid_subs.F90  grid_subs_a.F90  grid_subs_q.F90  harm.F90  hydraulic_structures.F90  lap.F90  levels.F90  misc_subs.F90  misc_subs_a.F90  misc_subs_q.F90  namelists.h  schism_finalize.F90  schism_init.F90  schism_io.F90  schism_step.F90  schism_step.F90.test  sflux_9c.F90  simpler_wind.F90  single_netcdf.F90  single_netcdf.F90.0  solver_subs.F90  transport_TVD.F90  transport_TVD.F90.0  transport_TVD_imp.F90
src/ICM/: CMakeLists.txt  combine_icm_output.f90  icm.F90  icm.F90.0  icm.in.sample  icm_biology.F90.0  icm_init.F90  icm_misc.F90  icm_mod.F90  icm_sed.in.sample  icm_sed_flux.F90  icm_sed_mod.F90  icm_sfm.F90  misc_module.txt  read_icm_input.F90  read_icm_input.F90.0  wqm_com.inc  wqm_sed.f
src/Ice/: CMakeLists.txt  ice_evp.F90  ice_fct.F90  ice_init.F90  ice_mevp.F90  ice_module.F90  ice_step.F90  ice_therm_mod.F90  ice_thermodynamics.F90  ice_transport.F90.0
src/Multi_ice/: CMakeLists.txt  gen_modules_clock.F90  icedrv_advection.F90  icedrv_allocate.F90  icedrv_constants.F90  icedrv_init.F90  icedrv_io.F90  icedrv_kinds.F90  icedrv_main.F90  icedrv_set.F90  icedrv_system.F90  icedrv_transfer.F90  icepack_aerosol.F90  icepack_age.F90  icepack_algae.F90  icepack_atmo.F90  icepack_brine.F90  icepack_firstyear.F90  icepack_flux.F90  icepack_fsd.F90  icepack_intfc.F90  icepack_isotope.F90  icepack_itd.F90  icepack_kinds.F90  icepack_mechred.F90  icepack_meltpond_cesm.F90.old  icepack_meltpond_lvl.F90  icepack_meltpond_topo.F90  icepack_mushy_physics.F90  icepack_ocean.F90  icepack_orbital.F90  icepack_parameters.F90  icepack_shortwave.F90  icepack_snow.F90  icepack_therm_0layer.F90  icepack_therm_bl99.F90  icepack_therm_itd.F90  icepack_therm_mushy.F90  icepack_therm_shared.F90  icepack_therm_vertical.F90  (+13 more)
src/OilSpill-Jung/: README  spill.in.sample
src/PDAF_bindings/: add_obs_error_pdaf.F90  assimilate_pdaf.F90  collect_state_pdaf.F90  distribute_state_pdaf.F90  distribute_stateinc_pdaf.F90  finalize_pdaf.F90  g2l_obs_pdaf.F90  g2l_state_pdaf.F90  get_obs_f_pdaf.F90  init_dim_l_pdaf.F90  init_dim_obs_f_pdaf.F90  init_dim_obs_l_pdaf.F90  init_dim_obs_pdaf.F90  init_enkf.F90  init_ens_pdaf.F90  init_n_domains_pdaf.F90  init_obs_f_pdaf.F90  init_obs_l_pdaf.F90  init_obs_pdaf.F90  init_obscovar_pdaf.F90  init_obserr_f_pdaf.F90  init_obsvar_l_pdaf.F90  init_obsvar_pdaf.F90  init_parallel_pdaf.F90  init_pdaf.F90  init_seek.F90  init_seik.F90  l2g_state_pdaf.F90  likelihood_l_pdaf.F90  likelihood_pdaf.F90  localize_covar_pdaf.F90  mod_assimilation.F90  mod_parallel_pdaf.F90  next_observation_pdaf.F90  nullmpi.F90  obs_op_f_pdaf.F90  obs_op_pdaf.F90  prepoststep_ens.F90  prepoststep_pdaf.F90  prepoststep_seek.F90  (+3 more)
src/ParMetis-3.1-Sep2010/: CMakeLists.txt  Makefile.in
src/ParMetis-3.1-Sep2010.cray/: Makefile.in  README
src/ParMetis-3.1-Sep2010.mpiicc/: INSTALL  Makefile  Makefile.in
src/ParMetis-4.0.3/: CMakeLists.txt  Install.txt  Makefile
src/ParMetis-4.0.3.cray/: BUILD.txt  CMakeLists.txt  Changelog  Graphs  Install.txt  LICENSE.txt  Makefile  build  include  libparmetis  manual  metis  programs
src/QSim/: CMakeLists.txt  model_library.F90  qsim_age.F90  qsim_decay.F90  qsim_tracerzone.F90  qsim_variables.F90
src/Sed2d/: CMakeLists.txt  README  sed2d_check.F90  sed2d_filter.F90  sed2d_friction.F90  sed2d_init.F90  sed2d_main.F90  sed2d_mod.F90  sed2d_morpho.F90  sed2d_read.F90  sed2d_transport.F90
src/Sediment/: CMakeLists.txt  Readme.md  read_sed_input.F90  sed_bedload.F90  sed_dump.in  sed_filter.F90  sed_friction.F90  sed_init.F90  sed_misc_subs.F90  sed_mod.F90  sed_poro.F90  sediment.F90  sediment.in.sample
src/Test_openMP/: notes_openMP  test1.f90
src/Utility/: CMakeLists.txt
(+3367 files in other folders)
